--- a/Frontend_Agencia/src/Layout/Styles/Footer.css
+++ b/Frontend_Agencia/src/Layout/Styles/Footer.css
@@ -1,7 +1,8 @@
 .estilo{
     display: flex;
     background-color: rgb(255, 230, 0);
-    justify-content: space-around;    
+    justify-content: space-around;  
+    flex-wrap: wrap;  
 }
 
 .contato{
