--- a/Frontend_Agencia/src/Layout/Styles/Menu.css
+++ b/Frontend_Agencia/src/Layout/Styles/Menu.css
@@ -43,10 +43,11 @@
 }
 .central img{
     width: 20px;
+    height: 20px;
 }
 
 /*-------------------------------------MEDIA QUERY-------------------------------------------------------*/
-@media(max-width:800px){
+ @media(max-width:800px){
     .central{
         text-align: center;
     }
@@ -68,6 +69,7 @@
         text-align: center;
         font-size: 10px;
     }  
+    
 }
 
 
@@ -79,10 +81,11 @@
     @media(max-width:338px){
         .menu{
             align-items: center;
+            
         }
     }
 }
 
 
 
-
+ 
