--- a/Frontend_Agencia/src/Layout/Styles/MenuBootstrap.css
+++ b/Frontend_Agencia/src/Layout/Styles/MenuBootstrap.css
@@ -10,35 +10,23 @@
 }
 .menu{
     
-    padding: 30px;
-    width: 80%;
-    height:30px;
-    display: flex; 
-    text-align: center; 
     text-decoration: none;
-    font-family: Serb Neue;
+    color: #1a0bee;
+    margin: 0px 10px;
     display: flex;
     justify-content: center;
-    color:bold;
     align-items: center;
-    height: 10px;
-    margin-top: 5%;
-    margin-left: 8%; 
-    border-radius: 2%; 
-    align-items: center;   
+    height: 40px;
+    width: 120px;
+    padding: 20px;
+    border-radius: 2%;    
 }
+
 .style{
     margin-top: 0%;
-    width:200px; 
+    width:50px; 
     height: 80px;  
 }
 
 
-@media(max-width:560px){
-    .lo{
-        width: 90%;
-        padding: 30px;  
-        text-align: center; 
-    }
-    
-}
+
